--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,493 +214,464 @@ jobs:
         python stage2_compiler.py py1repl.py1 > py1repl_final.py
         python py1repl_final.py fizzbuzz.ir
 
-      # 17. Windows Native IR (Final: Real FizzBuzz Logic)
+    # 17. Windows Native IR (修正版: インデント除去)
     - name: 17. Windows Native IR
       run: |
         # --- 1. WinIR Generator (Spec) ---
         cat <<'EOF' > win_ir_spec.py1
-        # Windows Native IR Generator
-        @v 表 'print'
-        @v 追 'append'
-        @v 字 'str'
-        @v 結 '"\n".join'
+# Windows Native IR Generator
+@v 表 'print'
+@v 追 'append'
+@v 字 'str'
+@v 結 '"\n".join'
 
-        @v 置 '"MOV"'
-        @v 取 '"LEA"'
-        @v 書 '"WRITE_MEM"'
-        @v 零 '"JZ"'
-        @v 飛 '"JMP"'
-        @v 比 '"CMP"'
-        @v 加 '"ADD"'
-        @v 連 '"LOAD_DLL"'
-        @v 得 '"GET_PROC"'
-        @v 呼 '"CALL_API"'
-        @v 押 '"PUSH"'
-        @v 札 '"LABEL"'
+@v 置 '"MOV"'
+@v 取 '"LEA"'
+@v 書 '"WRITE_MEM"'
+@v 零 '"JZ"'
+@v 飛 '"JMP"'
+@v 比 '"CMP"'
+@v 加 '"ADD"'
+@v 連 '"LOAD_DLL"'
+@v 得 '"GET_PROC"'
+@v 呼 '"CALL_API"'
+@v 押 '"PUSH"'
+@v 札 '"LABEL"'
 
-        # Registers
-        @v 壱 '"RBX"'
-        @v 弐 '"R12"'
-        @v 肆 '"R13"'
-        @v 繰 '"RCX"'
-        @v タ '"RDX"'
-        @v 蜂 '"R8"'
-        @v 苦 '"R9"'
-        @v 蓄 '"RAX"'
+# Registers
+@v 壱 '"RBX"'
+@v 弐 '"R12"'
+@v 肆 '"R13"'
+@v 繰 '"RCX"'
+@v タ '"RDX"'
+@v 蜂 '"R8"'
+@v 苦 '"R9"'
+@v 蓄 '"RAX"'
 
-        # Data
-        @v コ 'codes'
-        @v 蔵 '"kernel32.dll"'
-        @v 出 '"GetStdHandle"'
-        @v 記 '"WriteFile"'
-        @v 終 '"ExitProcess"'
-        @v 陰 '"-11"'
-        @v 空 '" "'
+# Data
+@v コ 'codes'
+@v 蔵 '"kernel32.dll"'
+@v 出 '"GetStdHandle"'
+@v 記 '"WriteFile"'
+@v 終 '"ExitProcess"'
+@v 陰 '"-11"'
+@v 空 '" "'
 
-        # Constants
-        @v 一 '"1"'
-        @v 十 '"10"'
-        @v 限 '"17"'
-        @v 二 '"2"'
-        @v 三 '"3"'
-        
-        # Buffer Addresses
-        # 100: Number Buffer (1-digit)
-        # 200: Fizz
-        # 300: Buzz
-        # 400: FizzBuzz
-        # 500: Number Buffer (2-digits)
-        @v バ壱 '"100"'
-        @v バ泡 '"200"'
-        @v バ響 '"300"'
-        @v バ合 '"400"'
-        @v バ弐 '"500"'
-        @v ポ '"600"'
+# Constants
+@v 一 '"1"'
+@v 十 '"10"'
+@v 限 '"17"'
+@v 二 '"2"'
+@v 三 '"3"'
 
-        # Values
-        @v 零値 '"0"'
-        @v 改 '"10"'
-        @v 字F '"70"'
-        @v 字i '"105"'
-        @v 字z '"122"'
-        @v 字B '"66"'
-        @v 字u '"117"'
-        @v 字0 '"48"'
-        @v 字1 '"49"'
-        @v 負十 '"-10"'
+# Buffer Addresses
+@v バ壱 '"100"'
+@v バ泡 '"200"'
+@v バ響 '"300"'
+@v バ合 '"400"'
+@v バ弐 '"500"'
+@v ポ '"600"'
 
-        # Labels
-        @v 廻 '"LOOP"'
-        @v 去 '"EXIT"'
-        @v 飛泡 '"L_FIZZ"'
-        @v 飛響 '"L_BUZZ"'
-        @v 飛合 '"L_FB"'
-        @v 飛数 '"L_NUM"'
-        @v 次 '"NEXT"'
+# Values
+@v 零値 '"0"'
+@v 改 '"10"'
+@v 字F '"70"'
+@v 字i '"105"'
+@v 字z '"122"'
+@v 字B '"66"'
+@v 字u '"117"'
+@v 字0 '"48"'
+@v 字1 '"49"'
+@v 負十 '"-10"'
 
-        $
+# Labels
+@v 廻 '"LOOP"'
+@v 去 '"EXIT"'
+@v 飛泡 '"L_FIZZ"'
+@v 飛響 '"L_BUZZ"'
+@v 飛合 '"L_FB"'
+@v 飛数 '"L_NUM"'
+@v 次 '"NEXT"'
 
-        コ = []
+$
 
-        # --- Init ---
-        コ.追(連 + 空 + 蔵)
-        コ.追(得 + 空 + 出)
-        コ.追(置 + 空 + 繰 + 空 + 陰)
-        コ.追(呼 + 空 + 出)
-        コ.追(置 + 空 + 肆 + 空 + 蓄)
-        コ.追(得 + 空 + 記)
-        コ.追(得 + 空 + 終)
+コ = []
 
-        # --- Prepare String Buffers ---
-        # Fizz at 200
-        コ.追(書 + 空 + バ泡 + 空 + 字F)
-        # 201='i', 202='z', 203='z', 204='\n' (Simplified: Just F i z z \n)
-        # To save code size, let's write byte by byte manually? No, let's trust the logic.
-        # Actually, let's just write "F" "z" "\n" style to keep it short or just strict logic.
-        # Let's setup simple buffers.
-        
-        # Buffer 200: F i z z \n (Length 5)
-        # F=70, i=105, z=122, \n=10
-        コ.追(書 + 空 + '"200"' + 空 + '"70"')
-        コ.追(書 + 空 + '"201"' + 空 + '"105"')
-        コ.追(書 + 空 + '"202"' + 空 + '"122"')
-        コ.追(書 + 空 + '"203"' + 空 + '"122"')
-        コ.追(書 + 空 + '"204"' + 空 + '"10"')
+# --- Init ---
+コ.追(連 + 空 + 蔵)
+コ.追(得 + 空 + 出)
+コ.追(置 + 空 + 繰 + 空 + 陰)
+コ.追(呼 + 空 + 出)
+コ.追(置 + 空 + 肆 + 空 + 蓄)
+コ.追(得 + 空 + 記)
+コ.追(得 + 空 + 終)
 
-        # Buffer 300: B u z z \n (Length 5)
-        # B=66, u=117, z=122
-        コ.追(書 + 空 + '"300"' + 空 + '"66"')
-        コ.追(書 + 空 + '"301"' + 空 + '"117"')
-        コ.追(書 + 空 + '"302"' + 空 + '"122"')
-        コ.追(書 + 空 + '"303"' + 空 + '"122"')
-        コ.追(書 + 空 + '"304"' + 空 + '"10"')
+# --- Prepare String Buffers ---
+# Buffer 200: Fizz
+コ.追(書 + 空 + '"200"' + 空 + '"70"')
+コ.追(書 + 空 + '"201"' + 空 + '"105"')
+コ.追(書 + 空 + '"202"' + 空 + '"122"')
+コ.追(書 + 空 + '"203"' + 空 + '"122"')
+コ.追(書 + 空 + '"204"' + 空 + '"10"')
 
-        # Buffer 400: F i z z B u z z \n (Length 9)
-        # Copy-paste logic is heavy. Let's just output Fizz then Buzz for 15?
-        # No, strictness.
-        コ.追(書 + 空 + '"400"' + 空 + '"70"')
-        コ.追(書 + 空 + '"401"' + 空 + '"105"')
-        コ.追(書 + 空 + '"402"' + 空 + '"122"')
-        コ.追(書 + 空 + '"403"' + 空 + '"122"')
-        コ.追(書 + 空 + '"404"' + 空 + '"66"')
-        コ.追(書 + 空 + '"405"' + 空 + '"117"')
-        コ.追(書 + 空 + '"406"' + 空 + '"122"')
-        コ.追(書 + 空 + '"407"' + 空 + '"122"')
-        コ.追(書 + 空 + '"408"' + 空 + '"10"')
+# Buffer 300: Buzz
+コ.追(書 + 空 + '"300"' + 空 + '"66"')
+コ.追(書 + 空 + '"301"' + 空 + '"117"')
+コ.追(書 + 空 + '"302"' + 空 + '"122"')
+コ.追(書 + 空 + '"303"' + 空 + '"122"')
+コ.追(書 + 空 + '"304"' + 空 + '"10"')
 
+# Buffer 400: FizzBuzz
+コ.追(書 + 空 + '"400"' + 空 + '"70"')
+コ.追(書 + 空 + '"401"' + 空 + '"105"')
+コ.追(書 + 空 + '"402"' + 空 + '"122"')
+コ.追(書 + 空 + '"403"' + 空 + '"122"')
+コ.追(書 + 空 + '"404"' + 空 + '"66"')
+コ.追(書 + 空 + '"405"' + 空 + '"117"')
+コ.追(書 + 空 + '"406"' + 空 + '"122"')
+コ.追(書 + 空 + '"407"' + 空 + '"122"')
+コ.追(書 + 空 + '"408"' + 空 + '"10"')
 
-        # --- Loop Start (RBX = 1) ---
-        コ.追(置 + 空 + 壱 + 空 + 一)
-        コ.追(札 + 空 + 廻)
+# --- Loop Start ---
+コ.追(置 + 空 + 壱 + 空 + 一)
+コ.追(札 + 空 + 廻)
 
-        # Check Limit (17)
-        コ.追(置 + 空 + 弐 + 空 + 限)
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 去)
+# Check Limit
+コ.追(置 + 空 + 弐 + 空 + 限)
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 去)
 
-        # --- Logic: Explicit Checks ---
-        # 15 -> FB
-        コ.追(置 + 空 + 弐 + 空 + '"15"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛合)
+# Logic
+# 15 -> FB
+コ.追(置 + 空 + 弐 + 空 + '"15"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛合)
 
-        # 5, 10 -> Buzz
-        コ.追(置 + 空 + 弐 + 空 + '"5"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛響)
-        コ.追(置 + 空 + 弐 + 空 + '"10"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛響)
+# 5, 10 -> Buzz
+コ.追(置 + 空 + 弐 + 空 + '"5"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛響)
+コ.追(置 + 空 + 弐 + 空 + '"10"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛響)
 
-        # 3, 6, 9, 12 -> Fizz
-        コ.追(置 + 空 + 弐 + 空 + '"3"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛泡)
-        コ.追(置 + 空 + 弐 + 空 + '"6"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛泡)
-        コ.追(置 + 空 + 弐 + 空 + '"9"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛泡)
-        コ.追(置 + 空 + 弐 + 空 + '"12"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + 飛泡)
+# 3, 6, 9, 12 -> Fizz
+コ.追(置 + 空 + 弐 + 空 + '"3"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛泡)
+コ.追(置 + 空 + 弐 + 空 + '"6"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛泡)
+コ.追(置 + 空 + 弐 + 空 + '"9"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛泡)
+コ.追(置 + 空 + 弐 + 空 + '"12"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + 飛泡)
 
-        # Else -> Number
-        # Check if >= 10 (11, 13, 14, 16)
-        # Since we only have JZ, checking equality is safer
-        コ.追(置 + 空 + 弐 + 空 + '"11"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + '"L_2D"')
-        コ.追(置 + 空 + 弐 + 空 + '"13"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + '"L_2D"')
-        コ.追(置 + 空 + 弐 + 空 + '"14"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + '"L_2D"')
-        コ.追(置 + 空 + 弐 + 空 + '"16"')
-        コ.追(比 + 空 + 壱 + 空 + 弐)
-        コ.追(零 + 空 + '"L_2D"')
+# Check 2 digits (11, 13, 14, 16)
+コ.追(置 + 空 + 弐 + 空 + '"11"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + '"L_2D"')
+コ.追(置 + 空 + 弐 + 空 + '"13"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + '"L_2D"')
+コ.追(置 + 空 + 弐 + 空 + '"14"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + '"L_2D"')
+コ.追(置 + 空 + 弐 + 空 + '"16"')
+コ.追(比 + 空 + 壱 + 空 + 弐)
+コ.追(零 + 空 + '"L_2D"')
 
-        # --- 1 Digit Logic (1, 2, 4, 7, 8) ---
-        # Buffer 100
-        # char = val + 48
-        コ.追(置 + 空 + 蓄 + 空 + 壱)
-        コ.追(加 + 空 + 蓄 + 空 + 字0)
-        コ.追(書 + 空 + バ壱 + 空 + 蓄)
-        コ.追(書 + 空 + '"101"' + 空 + 改)
-        
-        コ.追(置 + 空 + 繰 + 空 + 肆)
-        コ.追(取 + 空 + タ + 空 + バ壱)
-        コ.追(置 + 空 + 蜂 + 空 + 二)
-        コ.追(取 + 空 + 苦 + 空 + ポ)
-        コ.追(押 + 空 + 零値)
-        コ.追(呼 + 空 + 記)
-        コ.追(飛 + 空 + 次)
+# 1 Digit Logic
+コ.追(置 + 空 + 蓄 + 空 + 壱)
+コ.追(加 + 空 + 蓄 + 空 + 字0)
+コ.追(書 + 空 + バ壱 + 空 + 蓄)
+コ.追(書 + 空 + '"101"' + 空 + 改)
+コ.追(置 + 空 + 繰 + 空 + 肆)
+コ.追(取 + 空 + タ + 空 + バ壱)
+コ.追(置 + 空 + 蜂 + 空 + 二)
+コ.追(取 + 空 + 苦 + 空 + ポ)
+コ.追(押 + 空 + 零値)
+コ.追(呼 + 空 + 記)
+コ.追(飛 + 空 + 次)
 
-        # --- 2 Digit Logic (11, 13, 14, 16) ---
-        # Buffer 500
-        # 500 = '1'
-        # 501 = val - 10 + 48
-        # 502 = \n
-        コ.追(札 + 空 + '"L_2D"')
-        コ.追(書 + 空 + バ弐 + 空 + 字1)
-        コ.追(置 + 空 + 蓄 + 空 + 壱)
-        コ.追(加 + 空 + 蓄 + 空 + 負十)
-        コ.追(加 + 空 + 蓄 + 空 + 字0)
-        コ.追(書 + 空 + '"501"' + 空 + 蓄)
-        コ.追(書 + 空 + '"502"' + 空 + 改)
-        
-        コ.追(置 + 空 + 繰 + 空 + 肆)
-        コ.追(取 + 空 + タ + 空 + バ弐)
-        コ.追(置 + 空 + 蜂 + 空 + 三) # Len 3
-        コ.追(取 + 空 + 苦 + 空 + ポ)
-        コ.追(押 + 空 + 零値)
-        コ.追(呼 + 空 + 記)
-        コ.追(飛 + 空 + 次)
+# 2 Digit Logic
+コ.追(札 + 空 + '"L_2D"')
+コ.追(書 + 空 + バ弐 + 空 + 字1)
+コ.追(置 + 空 + 蓄 + 空 + 壱)
+コ.追(加 + 空 + 蓄 + 空 + 負十)
+コ.追(加 + 空 + 蓄 + 空 + 字0)
+コ.追(書 + 空 + '"501"' + 空 + 蓄)
+コ.追(書 + 空 + '"502"' + 空 + 改)
+コ.追(置 + 空 + 繰 + 空 + 肆)
+コ.追(取 + 空 + タ + 空 + バ弐)
+コ.追(置 + 空 + 蜂 + 空 + 三)
+コ.追(取 + 空 + 苦 + 空 + ポ)
+コ.追(押 + 空 + 零値)
+コ.追(呼 + 空 + 記)
+コ.追(飛 + 空 + 次)
 
-        # --- Print Fizz ---
-        コ.追(札 + 空 + 飛泡)
-        コ.追(置 + 空 + 繰 + 空 + 肆)
-        コ.追(取 + 空 + タ + 空 + バ泡)
-        コ.追(置 + 空 + 蜂 + 空 + '"5"')
-        コ.追(取 + 空 + 苦 + 空 + ポ)
-        コ.追(押 + 空 + 零値)
-        コ.追(呼 + 空 + 記)
-        コ.追(飛 + 空 + 次)
+# Print Fizz
+コ.追(札 + 空 + 飛泡)
+コ.追(置 + 空 + 繰 + 空 + 肆)
+コ.追(取 + 空 + タ + 空 + バ泡)
+コ.追(置 + 空 + 蜂 + 空 + '"5"')
+コ.追(取 + 空 + 苦 + 空 + ポ)
+コ.追(押 + 空 + 零値)
+コ.追(呼 + 空 + 記)
+コ.追(飛 + 空 + 次)
 
-        # --- Print Buzz ---
-        コ.追(札 + 空 + 飛響)
-        コ.追(置 + 空 + 繰 + 空 + 肆)
-        コ.追(取 + 空 + タ + 空 + バ響)
-        コ.追(置 + 空 + 蜂 + 空 + '"5"')
-        コ.追(取 + 空 + 苦 + 空 + ポ)
-        コ.追(押 + 空 + 零値)
-        コ.追(呼 + 空 + 記)
-        コ.追(飛 + 空 + 次)
+# Print Buzz
+コ.追(札 + 空 + 飛響)
+コ.追(置 + 空 + 繰 + 空 + 肆)
+コ.追(取 + 空 + タ + 空 + バ響)
+コ.追(置 + 空 + 蜂 + 空 + '"5"')
+コ.追(取 + 空 + 苦 + 空 + ポ)
+コ.追(押 + 空 + 零値)
+コ.追(呼 + 空 + 記)
+コ.追(飛 + 空 + 次)
 
-        # --- Print FizzBuzz ---
-        コ.追(札 + 空 + 飛合)
-        コ.追(置 + 空 + 繰 + 空 + 肆)
-        コ.追(取 + 空 + タ + 空 + バ合)
-        コ.追(置 + 空 + 蜂 + 空 + '"9"')
-        コ.追(取 + 空 + 苦 + 空 + ポ)
-        コ.追(押 + 空 + 零値)
-        コ.追(呼 + 空 + 記)
-        コ.追(飛 + 空 + 次)
+# Print FizzBuzz
+コ.追(札 + 空 + 飛合)
+コ.追(置 + 空 + 繰 + 空 + 肆)
+コ.追(取 + 空 + タ + 空 + バ合)
+コ.追(置 + 空 + 蜂 + 空 + '"9"')
+コ.追(取 + 空 + 苦 + 空 + ポ)
+コ.追(押 + 空 + 零値)
+コ.追(呼 + 空 + 記)
+コ.追(飛 + 空 + 次)
 
-        # --- Loop End ---
-        コ.追(札 + 空 + 次)
-        コ.追(加 + 空 + 壱 + 空 + 一)
-        コ.追(飛 + 空 + 廻)
+# Loop End
+コ.追(札 + 空 + 次)
+コ.追(加 + 空 + 壱 + 空 + 一)
+コ.追(飛 + 空 + 廻)
 
-        # --- Exit ---
-        コ.追(札 + 空 + 去)
-        コ.追(置 + 空 + 繰 + 空 + 零値)
-        コ.追(呼 + 空 + 終)
+# Exit
+コ.追(札 + 空 + 去)
+コ.追(置 + 空 + 繰 + 空 + 零値)
+コ.追(呼 + 空 + 終)
 
-        表(結(コ))
-        EOF
+表(結(コ))
+EOF
 
         # Generate IR
         python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py
         python win_ir_gen.py > fizzbuzz_win.ir
         
         # --- 2. Mock VM ---
-        # Mock doesn't strictly need JMP logic for this test if we skip it,
-        # but let's keep it consistent.
         cat <<'EOF' > vm_win_mock.py1
-        # Mock VM with LEA support
-        @v 表 'print'
-        @v 整 'int'
-        @v 寸 'len'
-        @v 追 'append'
-        @v 裂 'split'
-        @v 削 'strip'
-        @v 行 'splitlines'
-        @v 開 'open'
-        @v 読 'read'
-        @v 換 'replace'
-        @v 始 'startswith'
-        @v 終 'exit'
-        @v 実 'exec'
-        @v 字 'chr'
-        @v 数 'isnumeric'
-        @v 拾 'get'
+# Mock VM with LEA support
+@v 表 'print'
+@v 整 'int'
+@v 寸 'len'
+@v 追 'append'
+@v 裂 'split'
+@v 削 'strip'
+@v 行 'splitlines'
+@v 開 'open'
+@v 読 'read'
+@v 換 'replace'
+@v 始 'startswith'
+@v 終 'exit'
+@v 実 'exec'
+@v 字 'chr'
+@v 数 'isnumeric'
+@v 拾 'get'
 
-        @v 系 'sys'
-        @v 係 'argv'
-        @v 込 '"import sys"'
-        @v 術 'def'
-        @v も 'if'
-        @v 他 'else'
-        @v 循 'while'
-        @v 入 'in'
-        @v 或 'elif'
+@v 系 'sys'
+@v 係 'argv'
+@v 込 '"import sys"'
+@v 術 'def'
+@v も 'if'
+@v 他 'else'
+@v 循 'while'
+@v 入 'in'
+@v 或 'elif'
 
-        @v 置 '"MOV"'
-        @v 取 '"LEA"'
-        @v 呼 '"CALL_API"'
-        @v 連 '"LOAD_DLL"'
-        @v 得 '"GET_PROC"'
-        @v 書 '"WRITE_MEM"'
-        @v 札 '"LABEL"'
-        @v 比 '"CMP"'
-        @v 零 '"JZ"'
-        @v 飛 '"JMP"'
-        @v 加 '"ADD"'
-        @v 押 '"PUSH"'
+@v 置 '"MOV"'
+@v 取 '"LEA"'
+@v 呼 '"CALL_API"'
+@v 連 '"LOAD_DLL"'
+@v 得 '"GET_PROC"'
+@v 書 '"WRITE_MEM"'
+@v 札 '"LABEL"'
+@v 比 '"CMP"'
+@v 零 '"JZ"'
+@v 飛 '"JMP"'
+@v 加 '"ADD"'
+@v 押 '"PUSH"'
 
-        @v 外 'args'
-        @v 径 'path'
-        @v 本 'body'
-        @v 生 'lines'
-        @v コ 'codes'
-        @v 順 'i'
-        @v 線 'line'
-        @v 部 'parts'
-        @v 技 'op'
-        @v 偽 'mock_api'
-        @v 名 'name'
-        @v 先 'dst'
-        @v 元 'src'
-        @v 値 'val'
-        @v レ 'regs'
-        @v メ 'mem'
-        @v 局 'apis'
-        @v 指 'ip'
-        @v 辞 'labels'
+@v 外 'args'
+@v 径 'path'
+@v 本 'body'
+@v 生 'lines'
+@v コ 'codes'
+@v 順 'i'
+@v 線 'line'
+@v 部 'parts'
+@v 技 'op'
+@v 偽 'mock_api'
+@v 名 'name'
+@v 先 'dst'
+@v 元 'src'
+@v 値 'val'
+@v レ 'regs'
+@v メ 'mem'
+@v 局 'apis'
+@v 指 'ip'
+@v 辞 'labels'
 
-        @v 所 'addr'
-        @v 基 'buf_addr'
-        @v 幅 'length'
-        @v 器 'buffer'
-        @v カ 'k'
-        @v 符 'char_code'
-        @v 果 'exit_code'
-        @v 甲 'val_a'
-        @v 乙 'val_b'
+@v 所 'addr'
+@v 基 'buf_addr'
+@v 幅 'length'
+@v 器 'buffer'
+@v カ 'k'
+@v 符 'char_code'
+@v 果 'exit_code'
+@v 甲 'val_a'
+@v 乙 'val_b'
 
-        @v 核 '"kernel32.dll"'
-        @v ハ '"GetStdHandle"'
-        @v ラ '"WriteFile"'
-        @v 逝 '"ExitProcess"'
-        @v 題 '"MockWin: "'
-        @v 間 '" "'
-        @v モ '"r"'
-        @v 権 '"utf-8"'
-        @v 号 'encoding'
-        @v 蓄 '"RAX"'
-        @v 繰 '"RCX"'
-        @v タ '"RDX"'
-        @v 蜂 '"R8"'
-        @v 旗 '"ZF"'
-        @v 空 '""'
-        @v 説 '"Usage"'
-        
-        $
+@v 核 '"kernel32.dll"'
+@v ハ '"GetStdHandle"'
+@v ラ '"WriteFile"'
+@v 逝 '"ExitProcess"'
+@v 題 '"MockWin: "'
+@v 間 '" "'
+@v モ '"r"'
+@v 権 '"utf-8"'
+@v 号 'encoding'
+@v 蓄 '"RAX"'
+@v 繰 '"RCX"'
+@v タ '"RDX"'
+@v 蜂 '"R8"'
+@v 旗 '"ZF"'
+@v 空 '""'
+@v 説 '"Usage"'
 
-        実(込)
+$
 
-        術 偽(名, レ, メ):
-         も 名 == ハ:
-          レ[蓄] = 1
-         或 名 == ラ:
-          基 = レ[タ]
-          幅 = レ[蜂]
-          器 = 空
-          カ = 0
-          循 カ < 幅:
-           符 = メ.拾(基 + カ, 0)
-           器 = 器 + 字(符)
-           カ = カ + 1
-          表(題 + 器.削())
-          レ[蓄] = 1
-         或 名 == 逝:
-          系.終(0)
+実(込)
 
-        術 動(コ):
-         レ = {}
-         メ = {}
-         局 = {}
-         指 = 0
-         
-         辞 = {}
-         順 = 0
-         循 順 < 寸(コ):
-          線 = コ[順]
-          部 = 線.裂(間)
-          も 部[0] == 札:
-           辞[部[1]] = 順
-          順 = 順 + 1
-         
-         循 指 < 寸(コ):
-          線 = コ[指]
-          部 = 線.裂(間)
-          技 = 部[0]
-          
-          も 技 == 連:
-           0
-          或 技 == 得:
-           局[部[1]] = 部[1]
-          或 技 == 呼:
-           偽(部[1], レ, メ)
-          
-          或 技 == 置:
-           先 = 部[1]
-           元 = 部[2]
-           も 元.数():
-            レ[先] = 整(元)
-           他:
-            も 元 入 レ:
-             レ[先] = レ[元]
-            他:
-             レ[先] = 整(元)
+術 偽(名, レ, メ):
+ も 名 == ハ:
+  レ[蓄] = 1
+ 或 名 == ラ:
+  基 = レ[タ]
+  幅 = レ[蜂]
+  器 = 空
+  カ = 0
+  循 カ < 幅:
+   符 = メ.拾(基 + カ, 0)
+   器 = 器 + 字(符)
+   カ = カ + 1
+  表(題 + 器.削())
+  レ[蓄] = 1
+ 或 名 == 逝:
+  系.終(0)
 
-          # LEA -> MOV
-          或 技 == 取:
-           先 = 部[1]
-           元 = 部[2]
-           レ[先] = 整(元)
+術 動(コ):
+ レ = {}
+ メ = {}
+ 局 = {}
+ 指 = 0
+ 
+ 辞 = {}
+ 順 = 0
+ 循 順 < 寸(コ):
+  線 = コ[順]
+  部 = 線.裂(間)
+  も 部[0] == 札:
+   辞[部[1]] = 順
+  順 = 順 + 1
+ 
+ 循 指 < 寸(コ):
+  線 = コ[指]
+  部 = 線.裂(間)
+  技 = 部[0]
+  
+  も 技 == 連:
+   0
+  或 技 == 得:
+   局[部[1]] = 部[1]
+  或 技 == 呼:
+   偽(部[1], レ, メ)
+  
+  或 技 == 置:
+   先 = 部[1]
+   元 = 部[2]
+   も 元.数():
+    レ[先] = 整(元)
+   他:
+    も 元 入 レ:
+     レ[先] = レ[元]
+    他:
+     レ[先] = 整(元)
 
-          或 技 == 書:
-           所 = 整(部[1])
-           値 = 整(部[2])
-           メ[所] = 値
-          
-          或 技 == 比:
-           先 = 部[1]
-           元 = 部[2]
-           甲 = レ.拾(先, 0)
-           も 元 入 レ:
-            乙 = レ[元]
-           他:
-            乙 = 整(元)
-           も 甲 == 乙:
-            レ[旗] = 1
-           他:
-            レ[旗] = 0
-          
-          或 技 == 零:
-           も レ.拾(旗, 0) == 1:
-            指 = 辞[部[1]]
+  # LEA -> MOV
+  或 技 == 取:
+   先 = 部[1]
+   元 = 部[2]
+   レ[先] = 整(元)
 
-          # JMP Logic
-          或 技 == 飛:
-           指 = 辞[部[1]]
-          
-          或 技 == 加:
-           先 = 部[1]
-           元 = 部[2]
-           甲 = レ.拾(先, 0)
-           も 元.数():
-            乙 = 整(元)
-           他:
-            乙 = レ[元]
-           レ[先] = 甲 + 乙
-          
-          指 = 指 + 1
+  或 技 == 書:
+   所 = 整(部[1])
+   値 = 整(部[2])
+   メ[所] = 値
+  
+  或 技 == 比:
+   先 = 部[1]
+   元 = 部[2]
+   甲 = レ.拾(先, 0)
+   も 元 入 レ:
+    乙 = レ[元]
+   他:
+    乙 = 整(元)
+   も 甲 == 乙:
+    レ[旗] = 1
+   他:
+    レ[旗] = 0
+  
+  或 技 == 零:
+   も レ.拾(旗, 0) == 1:
+    指 = 辞[部[1]]
 
-        外 = 系.係
-        も 寸(外) < 2:
-         表(説)
-         系.終(1)
+  # JMP
+  或 技 == 飛:
+   指 = 辞[部[1]]
+  
+  或 技 == 加:
+   先 = 部[1]
+   元 = 部[2]
+   甲 = レ.拾(先, 0)
+   も 元.数():
+    乙 = 整(元)
+   他:
+    乙 = レ[元]
+   レ[先] = 甲 + 乙
+  
+  指 = 指 + 1
 
-        径 = 外[1]
-        本 = 開(径, モ, 号=権).読()
-        生 = 本.行()
-        コ = []
+外 = 系.係
+も 寸(外) < 2:
+ 表(説)
+ 系.終(1)
 
-        順 = 0
-        循 順 < 寸(生):
-         線 = 生[順]
-         線 = 線.削()
-         も 寸(線) > 0:
-          コ.追(線)
-         順 = 順 + 1
+径 = 外[1]
+本 = 開(径, モ, 号=権).読()
+生 = 本.行()
+コ = []
 
-        動(コ)
-        EOF
+順 = 0
+循 順 < 寸(生):
+ 線 = 生[順]
+ 線 = 線.削()
+ も 寸(線) > 0:
+  コ.追(線)
+ 順 = 順 + 1
+
+動(コ)
+EOF
         
         # Run Mock
         python stage2_compiler.py vm_win_mock.py1 > vm_win_mock.py
