--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,7 +214,7 @@ jobs:
         python stage2_compiler.py py1repl.py1 > py1repl_final.py
         python py1repl_final.py fizzbuzz.ir
 
-    # 17. Windows Native IR (完全厳格版: 1文字変数・インデント修正済)
+    # 17. Windows Native IR (完全厳格版: 1文字変数のみ)
     - name: 17. Windows Native IR
       run: |
         cat <<EOF > win_ir_spec.py1
@@ -272,16 +272,16 @@ jobs:
         @v 針 '"600"'
 
         # Values
-        @v 零値 '"0"'
+        @v 無 '"0"'
         @v 改 '"10"'
-        @v 字F '"70"'
-        @v 字i '"105"'
-        @v 字z '"122"'
-        @v 字B '"66"'
-        @v 字u '"117"'
-        @v 字0 '"48"'
-        @v 字1 '"49"'
-        @v 減 '"-10"'
+        @v 父 '"70"'
+        @v 愛 '"105"'
+        @v 寝 '"122"'
+        @v 豚 '"66"'
+        @v 鵜 '"117"'
+        @v 丸 '"48"'
+        @v 棒 '"49"'
+        @v 損 '"-10"'
 
         # Labels
         @v 廻 '"LOOP"'
@@ -307,29 +307,29 @@ jobs:
 
         # --- Prepare Buffers ---
         # Fizz (200)
-        コ.追(書 + 空 + 泡 + 空 + '"70"')
-        コ.追(書 + 空 + '"201"' + 空 + '"105"')
-        コ.追(書 + 空 + '"202"' + 空 + '"122"')
-        コ.追(書 + 空 + '"203"' + 空 + '"122"')
-        コ.追(書 + 空 + '"204"' + 空 + '"10"')
+        コ.追(書 + 空 + 泡 + 空 + 父)
+        コ.追(書 + 空 + '"201"' + 空 + 愛)
+        コ.追(書 + 空 + '"202"' + 空 + 寝)
+        コ.追(書 + 空 + '"203"' + 空 + 寝)
+        コ.追(書 + 空 + '"204"' + 空 + 改)
 
         # Buzz (300)
-        コ.追(書 + 空 + 鳴 + 空 + '"66"')
-        コ.追(書 + 空 + '"301"' + 空 + '"117"')
-        コ.追(書 + 空 + '"302"' + 空 + '"122"')
-        コ.追(書 + 空 + '"303"' + 空 + '"122"')
-        コ.追(書 + 空 + '"304"' + 空 + '"10"')
+        コ.追(書 + 空 + 鳴 + 空 + 豚)
+        コ.追(書 + 空 + '"301"' + 空 + 鵜)
+        コ.追(書 + 空 + '"302"' + 空 + 寝)
+        コ.追(書 + 空 + '"303"' + 空 + 寝)
+        コ.追(書 + 空 + '"304"' + 空 + 改)
 
         # FizzBuzz (400)
-        コ.追(書 + 空 + 混 + 空 + '"70"')
-        コ.追(書 + 空 + '"401"' + 空 + '"105"')
-        コ.追(書 + 空 + '"402"' + 空 + '"122"')
-        コ.追(書 + 空 + '"403"' + 空 + '"122"')
-        コ.追(書 + 空 + '"404"' + 空 + '"66"')
-        コ.追(書 + 空 + '"405"' + 空 + '"117"')
-        コ.追(書 + 空 + '"406"' + 空 + '"122"')
-        コ.追(書 + 空 + '"407"' + 空 + '"122"')
-        コ.追(書 + 空 + '"408"' + 空 + '"10"')
+        コ.追(書 + 空 + 混 + 空 + 父)
+        コ.追(書 + 空 + '"401"' + 空 + 愛)
+        コ.追(書 + 空 + '"402"' + 空 + 寝)
+        コ.追(書 + 空 + '"403"' + 空 + 寝)
+        コ.追(書 + 空 + '"404"' + 空 + 豚)
+        コ.追(書 + 空 + '"405"' + 空 + 鵜)
+        コ.追(書 + 空 + '"406"' + 空 + 寝)
+        コ.追(書 + 空 + '"407"' + 空 + 寝)
+        コ.追(書 + 空 + '"408"' + 空 + 改)
 
         # --- Loop Start ---
         コ.追(置 + 空 + 壱 + 空 + 一)
@@ -384,30 +384,30 @@ jobs:
 
         # 1 Digit Logic
         コ.追(置 + 空 + 蓄 + 空 + 壱)
-        コ.追(加 + 空 + 蓄 + 空 + 字0)
+        コ.追(加 + 空 + 蓄 + 空 + 丸)
         コ.追(書 + 空 + 壺 + 空 + 蓄)
         コ.追(書 + 空 + '"101"' + 空 + 改)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 壺)
         コ.追(置 + 空 + 蜂 + 空 + 二)
         コ.追(取 + 空 + 苦 + 空 + 針)
-        コ.追(押 + 空 + 零値)
+        コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
         # 2 Digit Logic
         コ.追(札 + 空 + 丁)
-        コ.追(書 + 空 + 桁 + 空 + 字1)
+        コ.追(書 + 空 + 桁 + 空 + 棒)
         コ.追(置 + 空 + 蓄 + 空 + 壱)
-        コ.追(加 + 空 + 蓄 + 空 + 減)
-        コ.追(加 + 空 + 蓄 + 空 + 字0)
+        コ.追(加 + 空 + 蓄 + 空 + 損)
+        コ.追(加 + 空 + 蓄 + 空 + 丸)
         コ.追(書 + 空 + '"501"' + 空 + 蓄)
         コ.追(書 + 空 + '"502"' + 空 + 改)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 桁)
         コ.追(置 + 空 + 蜂 + 空 + 三)
         コ.追(取 + 空 + 苦 + 空 + 針)
-        コ.追(押 + 空 + 零値)
+        コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
@@ -417,7 +417,7 @@ jobs:
         コ.追(取 + 空 + タ + 空 + 泡)
         コ.追(置 + 空 + 蜂 + 空 + '"5"')
         コ.追(取 + 空 + 苦 + 空 + 針)
-        コ.追(押 + 空 + 零値)
+        コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
@@ -427,7 +427,7 @@ jobs:
         コ.追(取 + 空 + タ + 空 + 鳴)
         コ.追(置 + 空 + 蜂 + 空 + '"5"')
         コ.追(取 + 空 + 苦 + 空 + 針)
-        コ.追(押 + 空 + 零値)
+        コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
@@ -437,7 +437,7 @@ jobs:
         コ.追(取 + 空 + タ + 空 + 混)
         コ.追(置 + 空 + 蜂 + 空 + '"9"')
         コ.追(取 + 空 + 苦 + 空 + 針)
-        コ.追(押 + 空 + 零値)
+        コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
         コ.追(飛 + 空 + 次)
 
@@ -448,7 +448,7 @@ jobs:
 
         # Exit
         コ.追(札 + 空 + 去)
-        コ.追(置 + 空 + 繰 + 空 + 零値)
+        コ.追(置 + 空 + 繰 + 空 + 無)
         コ.追(呼 + 空 + 終)
 
         表(結(コ))
