--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -214,7 +214,7 @@ jobs:
         python stage2_compiler.py py1repl.py1 > py1repl_final.py
         python py1repl_final.py fizzbuzz.ir
 
-    # 17. Windows Native IR (完全厳格版: 1文字変数・インデント修正済)
+        # 17. Windows Native IR (Final Fix: Remove ALL quotes in body)
     - name: 17. Windows Native IR
       run: |
         cat <<EOF > win_ir_spec.py1
@@ -305,31 +305,31 @@ jobs:
         コ.追(得 + 空 + 記)
         コ.追(得 + 空 + 終)
 
-        # --- Prepare Buffers ---
+        # --- Prepare Buffers (Fixed: Use 字() instead of quotes) ---
         # Fizz (200)
         コ.追(書 + 空 + 泡 + 空 + 父)
-        コ.追(書 + 空 + '"201"' + 空 + 愛)
-        コ.追(書 + 空 + '"202"' + 空 + 寝)
-        コ.追(書 + 空 + '"203"' + 空 + 寝)
-        コ.追(書 + 空 + '"204"' + 空 + 改)
+        コ.追(書 + 空 + 字(201) + 空 + 愛)
+        コ.追(書 + 空 + 字(202) + 空 + 寝)
+        コ.追(書 + 空 + 字(203) + 空 + 寝)
+        コ.追(書 + 空 + 字(204) + 空 + 改)
 
         # Buzz (300)
         コ.追(書 + 空 + 鳴 + 空 + 豚)
-        コ.追(書 + 空 + '"301"' + 空 + 鵜)
-        コ.追(書 + 空 + '"302"' + 空 + 寝)
-        コ.追(書 + 空 + '"303"' + 空 + 寝)
-        コ.追(書 + 空 + '"304"' + 空 + 改)
+        コ.追(書 + 空 + 字(301) + 空 + 鵜)
+        コ.追(書 + 空 + 字(302) + 空 + 寝)
+        コ.追(書 + 空 + 字(303) + 空 + 寝)
+        コ.追(書 + 空 + 字(304) + 空 + 改)
 
         # FizzBuzz (400)
         コ.追(書 + 空 + 混 + 空 + 父)
-        コ.追(書 + 空 + '"401"' + 空 + 愛)
-        コ.追(書 + 空 + '"402"' + 空 + 寝)
-        コ.追(書 + 空 + '"403"' + 空 + 寝)
-        コ.追(書 + 空 + '"404"' + 空 + 豚)
-        コ.追(書 + 空 + '"405"' + 空 + 鵜)
-        コ.追(書 + 空 + '"406"' + 空 + 寝)
-        コ.追(書 + 空 + '"407"' + 空 + 寝)
-        コ.追(書 + 空 + '"408"' + 空 + 改)
+        コ.追(書 + 空 + 字(401) + 空 + 愛)
+        コ.追(書 + 空 + 字(402) + 空 + 寝)
+        コ.追(書 + 空 + 字(403) + 空 + 寝)
+        コ.追(書 + 空 + 字(404) + 空 + 豚)
+        コ.追(書 + 空 + 字(405) + 空 + 鵜)
+        コ.追(書 + 空 + 字(406) + 空 + 寝)
+        コ.追(書 + 空 + 字(407) + 空 + 寝)
+        コ.追(書 + 空 + 字(408) + 空 + 改)
 
         # --- Loop Start ---
         コ.追(置 + 空 + 壱 + 空 + 一)
@@ -340,45 +340,45 @@ jobs:
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 去)
 
-        # Logic
+        # Logic (Fixed: Use 字() instead of quotes)
         # 15 -> FB
-        コ.追(置 + 空 + 弐 + 空 + '"15"')
+        コ.追(置 + 空 + 弐 + 空 + 字(15))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丙)
 
         # 5, 10 -> Buzz
-        コ.追(置 + 空 + 弐 + 空 + '"5"')
+        コ.追(置 + 空 + 弐 + 空 + 字(5))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 乙)
-        コ.追(置 + 空 + 弐 + 空 + '"10"')
+        コ.追(置 + 空 + 弐 + 空 + 字(10))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 乙)
 
         # 3, 6, 9, 12 -> Fizz
-        コ.追(置 + 空 + 弐 + 空 + '"3"')
+        コ.追(置 + 空 + 弐 + 空 + 字(3))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 甲)
-        コ.追(置 + 空 + 弐 + 空 + '"6"')
+        コ.追(置 + 空 + 弐 + 空 + 字(6))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 甲)
-        コ.追(置 + 空 + 弐 + 空 + '"9"')
+        コ.追(置 + 空 + 弐 + 空 + 字(9))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 甲)
-        コ.追(置 + 空 + 弐 + 空 + '"12"')
+        コ.追(置 + 空 + 弐 + 空 + 字(12))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 甲)
 
         # Check 2 digits (11, 13, 14, 16)
-        コ.追(置 + 空 + 弐 + 空 + '"11"')
+        コ.追(置 + 空 + 弐 + 空 + 字(11))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
-        コ.追(置 + 空 + 弐 + 空 + '"13"')
+        コ.追(置 + 空 + 弐 + 空 + 字(13))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
-        コ.追(置 + 空 + 弐 + 空 + '"14"')
+        コ.追(置 + 空 + 弐 + 空 + 字(14))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
-        コ.追(置 + 空 + 弐 + 空 + '"16"')
+        コ.追(置 + 空 + 弐 + 空 + 字(16))
         コ.追(比 + 空 + 壱 + 空 + 弐)
         コ.追(零 + 空 + 丁)
 
@@ -386,7 +386,7 @@ jobs:
         コ.追(置 + 空 + 蓄 + 空 + 壱)
         コ.追(加 + 空 + 蓄 + 空 + 丸)
         コ.追(書 + 空 + 壺 + 空 + 蓄)
-        コ.追(書 + 空 + '"101"' + 空 + 改)
+        コ.追(書 + 空 + 字(101) + 空 + 改)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 壺)
         コ.追(置 + 空 + 蜂 + 空 + 二)
@@ -401,8 +401,8 @@ jobs:
         コ.追(置 + 空 + 蓄 + 空 + 壱)
         コ.追(加 + 空 + 蓄 + 空 + 損)
         コ.追(加 + 空 + 蓄 + 空 + 丸)
-        コ.追(書 + 空 + '"501"' + 空 + 蓄)
-        コ.追(書 + 空 + '"502"' + 空 + 改)
+        コ.追(書 + 空 + 字(501) + 空 + 蓄)
+        コ.追(書 + 空 + 字(502) + 空 + 改)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 桁)
         コ.追(置 + 空 + 蜂 + 空 + 三)
@@ -415,7 +415,7 @@ jobs:
         コ.追(札 + 空 + 甲)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 泡)
-        コ.追(置 + 空 + 蜂 + 空 + '"5"')
+        コ.追(置 + 空 + 蜂 + 空 + 字(5))
         コ.追(取 + 空 + 苦 + 空 + 針)
         コ.追(押 + 空 + 零値)
         コ.追(呼 + 空 + 記)
@@ -425,7 +425,7 @@ jobs:
         コ.追(札 + 空 + 乙)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 鳴)
-        コ.追(置 + 空 + 蜂 + 空 + '"5"')
+        コ.追(置 + 空 + 蜂 + 空 + 字(5))
         コ.追(取 + 空 + 苦 + 空 + 針)
         コ.追(押 + 空 + 零値)
         コ.追(呼 + 空 + 記)
@@ -435,7 +435,7 @@ jobs:
         コ.追(札 + 空 + 丙)
         コ.追(置 + 空 + 繰 + 空 + 肆)
         コ.追(取 + 空 + タ + 空 + 混)
-        コ.追(置 + 空 + 蜂 + 空 + '"9"')
+        コ.追(置 + 空 + 蜂 + 空 + 字(9))
         コ.追(取 + 空 + 苦 + 空 + 針)
         コ.追(押 + 空 + 零値)
         コ.追(呼 + 空 + 記)
@@ -454,8 +454,10 @@ jobs:
         表(結(コ))
         EOF
 
-        # Generate IR
-        python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py
+        # Generate IR (If it fails, print the error hidden in the output file)
+        python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py || (cat win_ir_gen.py && exit 1)
+        
+        # Compile generated IR
         python win_ir_gen.py > fizzbuzz_win.ir
         
         # --- 2. Mock VM ---
