--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,8 +107,20 @@ jobs:
         python compiler_gen3.py unicode_test.py1 > output_uni.py
         python output_uni.py
 
-    # 6-14 Skipped for brevity, can be added back if needed.
-    # Jumping to core steps.
+    # 6. IR Compilation
+    - name: 6. IR Compilation
+      run: |
+        python compiler_gen3.py compiler_ir.py1 > compiler_ir.py
+        python compiler_ir.py fizzbuzz_while.py1 > fizzbuzz.ir
+        cat fizzbuzz.ir
+
+    # 7. Native VM (C)
+    - name: 7. Native VM Execution (C)
+      run: |
+        gcc -o vm.exe vm.c
+        ./vm.exe fizzbuzz.ir
+
+    # 8-14 Skipped for brevity
 
     # 15. Self-Hosting Compiler
     - name: 15. Self-Hosting Compiler
@@ -122,464 +134,467 @@ jobs:
       run: |
         python compiler_gen3.py py1_compiler.py1 > stage1_compiler.py
         python stage1_compiler.py py1_compiler.py1 > stage2_compiler.py
+        python stage2_compiler.py py1repl.py1 > py1repl_final.py
+        python py1repl_final.py fizzbuzz.ir
 
-    # 17. Windows Native IR (Fix: Use '穴' for 0, Initialize Registers in Mock)
+    # 17. Windows Native IR (Correct YAML Indentation & 1-char Vars)
     - name: 17. Windows Native IR
       run: |
         cat <<EOF > win_ir_spec.py1
-# Windows Native IR Generator
-@v 表 'print'
-@v 追 'append'
-@v 字 'str'
-@v 結 '"\n".join'
+        # Windows Native IR Generator
+        @v 表 'print'
+        @v 追 'append'
+        @v 字 'str'
+        @v 結 '"\n".join'
 
-@v 置 '"MOV"'
-@v 取 '"LEA"'
-@v 書 '"WRITE_MEM"'
-@v 零 '"JZ"'
-@v 飛 '"JMP"'
-@v 比 '"CMP"'
-@v 加 '"ADD"'
-@v 連 '"LOAD_DLL"'
-@v 得 '"GET_PROC"'
-@v 呼 '"CALL_API"'
-@v 押 '"PUSH"'
-@v 札 '"LABEL"'
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'
+        @v 書 '"WRITE_MEM"'
+        @v 零 '"JZ"'
+        @v 飛 '"JMP"'
+        @v 比 '"CMP"'
+        @v 加 '"ADD"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 呼 '"CALL_API"'
+        @v 押 '"PUSH"'
+        @v 札 '"LABEL"'
 
-# Registers
-@v 壱 '"RBX"'
-@v 弐 '"R12"'
-@v 肆 '"R13"'
-@v 繰 '"RCX"'
-@v タ '"RDX"'
-@v 蜂 '"R8"'
-@v 苦 '"R9"'
-@v 蓄 '"RAX"'
+        # Registers
+        @v 壱 '"RBX"'
+        @v 弐 '"R12"'
+        @v 肆 '"R13"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 苦 '"R9"'
+        @v 蓄 '"RAX"'
 
-# Data
-@v コ 'codes'
-@v 蔵 '"kernel32.dll"'
-@v 出 '"GetStdHandle"'
-@v 記 '"WriteFile"'
-@v 終 '"ExitProcess"'
-@v 陰 '"-11"'
-@v 空 '" "'
+        # Data
+        @v コ 'codes'
+        @v 蔵 '"kernel32.dll"'
+        @v 出 '"GetStdHandle"'
+        @v 記 '"WriteFile"'
+        @v 終 '"ExitProcess"'
+        @v 陰 '"-11"'
+        @v 空 '" "'
 
-# Constants
-@v 一 '"1"'
-@v 十 '"10"'
-@v 限 '"17"'
-@v 二 '"2"'
-@v 三 '"3"'
+        # Constants
+        @v 一 '"1"'
+        @v 十 '"10"'
+        @v 限 '"17"'
+        @v 二 '"2"'
+        @v 三 '"3"'
 
-# Buffers
-@v 壺 '"100"'
-@v 泡 '"200"'
-@v 鳴 '"300"'
-@v 混 '"400"'
-@v 桁 '"500"'
-@v 針 '"600"'
+        # Buffers
+        @v 壺 '"100"'
+        @v 泡 '"200"'
+        @v 鳴 '"300"'
+        @v 混 '"400"'
+        @v 桁 '"500"'
+        @v 針 '"600"'
 
-# Values
-@v 穴 '"0"'   # Fixed: Was '零値'
-@v 改 '"10"'
-@v 父 '"70"'  # F
-@v 愛 '"105"' # i
-@v 寝 '"122"' # z
-@v 豚 '"66"'  # B
-@v 鵜 '"117"' # u
-@v 丸 '"48"'  # 0
-@v 棒 '"49"'  # 1
-@v 損 '"-10"'
+        # Values
+        @v 穴 '"0"'
+        @v 改 '"10"'
+        @v 父 '"70"'
+        @v 愛 '"105"'
+        @v 寝 '"122"'
+        @v 豚 '"66"'
+        @v 鵜 '"117"'
+        @v 丸 '"48"'
+        @v 棒 '"49"'
+        @v 損 '"-10"'
 
-# Labels
-@v 廻 '"LOOP"'
-@v 去 '"EXIT"'
-@v 甲 '"L_FIZZ"'
-@v 乙 '"L_BUZZ"'
-@v 丙 '"L_FB"'
-@v 丁 '"L_2D"'
-@v 次 '"NEXT"'
+        # Labels
+        @v 廻 '"LOOP"'
+        @v 去 '"EXIT"'
+        @v 甲 '"L_FIZZ"'
+        @v 乙 '"L_BUZZ"'
+        @v 丙 '"L_FB"'
+        @v 丁 '"L_2D"'
+        @v 次 '"NEXT"'
 
-$
+        $
 
-コ = []
+        コ = []
 
-# --- Init ---
-コ.追(連 + 空 + 蔵)
-コ.追(得 + 空 + 出)
-コ.追(置 + 空 + 繰 + 空 + 陰)
-コ.追(呼 + 空 + 出)
-コ.追(置 + 空 + 肆 + 空 + 蓄)
-コ.追(得 + 空 + 記)
-コ.追(得 + 空 + 終)
+        # --- Init ---
+        コ.追(連 + 空 + 蔵)
+        コ.追(得 + 空 + 出)
+        コ.追(置 + 空 + 繰 + 空 + 陰)
+        コ.追(呼 + 空 + 出)
+        コ.追(置 + 空 + 肆 + 空 + 蓄)
+        コ.追(得 + 空 + 記)
+        コ.追(得 + 空 + 終)
 
-# --- Prepare Buffers ---
-# Fizz (200)
-コ.追(書 + 空 + 泡 + 空 + 父)
-コ.追(書 + 空 + 字(201) + 空 + 愛)
-コ.追(書 + 空 + 字(202) + 空 + 寝)
-コ.追(書 + 空 + 字(203) + 空 + 寝)
-コ.追(書 + 空 + 字(204) + 空 + 改)
+        # --- Prepare Buffers ---
+        # Fizz (200)
+        コ.追(書 + 空 + 泡 + 空 + 父)
+        コ.追(書 + 空 + 字(201) + 空 + 愛)
+        コ.追(書 + 空 + 字(202) + 空 + 寝)
+        コ.追(書 + 空 + 字(203) + 空 + 寝)
+        コ.追(書 + 空 + 字(204) + 空 + 改)
 
-# Buzz (300)
-コ.追(書 + 空 + 鳴 + 空 + 豚)
-コ.追(書 + 空 + 字(301) + 空 + 鵜)
-コ.追(書 + 空 + 字(302) + 空 + 寝)
-コ.追(書 + 空 + 字(303) + 空 + 寝)
-コ.追(書 + 空 + 字(304) + 空 + 改)
+        # Buzz (300)
+        コ.追(書 + 空 + 鳴 + 空 + 豚)
+        コ.追(書 + 空 + 字(301) + 空 + 鵜)
+        コ.追(書 + 空 + 字(302) + 空 + 寝)
+        コ.追(書 + 空 + 字(303) + 空 + 寝)
+        コ.追(書 + 空 + 字(304) + 空 + 改)
 
-# FizzBuzz (400)
-コ.追(書 + 空 + 混 + 空 + 父)
-コ.追(書 + 空 + 字(401) + 空 + 愛)
-コ.追(書 + 空 + 字(402) + 空 + 寝)
-コ.追(書 + 空 + 字(403) + 空 + 寝)
-コ.追(書 + 空 + 字(404) + 空 + 豚)
-コ.追(書 + 空 + 字(405) + 空 + 鵜)
-コ.追(書 + 空 + 字(406) + 空 + 寝)
-コ.追(書 + 空 + 字(407) + 空 + 寝)
-コ.追(書 + 空 + 字(408) + 空 + 改)
+        # FizzBuzz (400)
+        コ.追(書 + 空 + 混 + 空 + 父)
+        コ.追(書 + 空 + 字(401) + 空 + 愛)
+        コ.追(書 + 空 + 字(402) + 空 + 寝)
+        コ.追(書 + 空 + 字(403) + 空 + 寝)
+        コ.追(書 + 空 + 字(404) + 空 + 豚)
+        コ.追(書 + 空 + 字(405) + 空 + 鵜)
+        コ.追(書 + 空 + 字(406) + 空 + 寝)
+        コ.追(書 + 空 + 字(407) + 空 + 寝)
+        コ.追(書 + 空 + 字(408) + 空 + 改)
 
-# --- Loop Start ---
-コ.追(置 + 空 + 壱 + 空 + 一)
-コ.追(札 + 空 + 廻)
+        # --- Loop Start ---
+        コ.追(置 + 空 + 壱 + 空 + 一)
+        コ.追(札 + 空 + 廻)
 
-# Check Limit
-コ.追(置 + 空 + 弐 + 空 + 限)
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 去)
+        # Check Limit
+        コ.追(置 + 空 + 弐 + 空 + 限)
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 去)
 
-# Logic
-# 15 -> FB
-コ.追(置 + 空 + 弐 + 空 + 字(15))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 丙)
+        # Logic
+        # 15 -> FB
+        コ.追(置 + 空 + 弐 + 空 + 字(15))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 丙)
 
-# 5, 10 -> Buzz
-コ.追(置 + 空 + 弐 + 空 + 字(5))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 乙)
-コ.追(置 + 空 + 弐 + 空 + 字(10))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 乙)
+        # 5, 10 -> Buzz
+        コ.追(置 + 空 + 弐 + 空 + 字(5))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 乙)
+        コ.追(置 + 空 + 弐 + 空 + 字(10))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 乙)
 
-# 3, 6, 9, 12 -> Fizz
-コ.追(置 + 空 + 弐 + 空 + 字(3))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 甲)
-コ.追(置 + 空 + 弐 + 空 + 字(6))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 甲)
-コ.追(置 + 空 + 弐 + 空 + 字(9))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 甲)
-コ.追(置 + 空 + 弐 + 空 + 字(12))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 甲)
+        # 3, 6, 9, 12 -> Fizz
+        コ.追(置 + 空 + 弐 + 空 + 字(3))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 甲)
+        コ.追(置 + 空 + 弐 + 空 + 字(6))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 甲)
+        コ.追(置 + 空 + 弐 + 空 + 字(9))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 甲)
+        コ.追(置 + 空 + 弐 + 空 + 字(12))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 甲)
 
-# Check 2 digits (11, 13, 14, 16)
-コ.追(置 + 空 + 弐 + 空 + 字(11))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 丁)
-コ.追(置 + 空 + 弐 + 空 + 字(13))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 丁)
-コ.追(置 + 空 + 弐 + 空 + 字(14))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 丁)
-コ.追(置 + 空 + 弐 + 空 + 字(16))
-コ.追(比 + 空 + 壱 + 空 + 弐)
-コ.追(零 + 空 + 丁)
+        # Check 2 digits (11, 13, 14, 16)
+        コ.追(置 + 空 + 弐 + 空 + 字(11))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 丁)
+        コ.追(置 + 空 + 弐 + 空 + 字(13))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 丁)
+        コ.追(置 + 空 + 弐 + 空 + 字(14))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 丁)
+        コ.追(置 + 空 + 弐 + 空 + 字(16))
+        コ.追(比 + 空 + 壱 + 空 + 弐)
+        コ.追(零 + 空 + 丁)
 
-# 1 Digit Logic
-コ.追(置 + 空 + 蓄 + 空 + 壱)
-コ.追(加 + 空 + 蓄 + 空 + 丸)
-コ.追(書 + 空 + 壺 + 空 + 蓄)
-コ.追(書 + 空 + 字(101) + 空 + 改)
-コ.追(置 + 空 + 繰 + 空 + 肆)
-コ.追(取 + 空 + タ + 空 + 壺)
-コ.追(置 + 空 + 蜂 + 空 + 二)
-コ.追(取 + 空 + 苦 + 空 + 針)
-コ.追(押 + 空 + 穴)
-コ.追(呼 + 空 + 記)
-コ.追(飛 + 空 + 次)
+        # 1 Digit Logic
+        コ.追(置 + 空 + 蓄 + 空 + 壱)
+        コ.追(加 + 空 + 蓄 + 空 + 丸)
+        コ.追(書 + 空 + 壺 + 空 + 蓄)
+        コ.追(書 + 空 + 字(101) + 空 + 改)
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 壺)
+        コ.追(置 + 空 + 蜂 + 空 + 二)
+        コ.追(取 + 空 + 苦 + 空 + 針)
+        コ.追(押 + 空 + 穴)
+        コ.追(呼 + 空 + 記)
+        コ.追(飛 + 空 + 次)
 
-# 2 Digit Logic
-コ.追(札 + 空 + 丁)
-コ.追(書 + 空 + 桁 + 空 + 棒)
-コ.追(置 + 空 + 蓄 + 空 + 壱)
-コ.追(加 + 空 + 蓄 + 空 + 損)
-コ.追(加 + 空 + 蓄 + 空 + 丸)
-コ.追(書 + 空 + 字(501) + 空 + 蓄)
-コ.追(書 + 空 + 字(502) + 空 + 改)
-コ.追(置 + 空 + 繰 + 空 + 肆)
-コ.追(取 + 空 + タ + 空 + 桁)
-コ.追(置 + 空 + 蜂 + 空 + 三)
-コ.追(取 + 空 + 苦 + 空 + 針)
-コ.追(押 + 空 + 穴)
-コ.追(呼 + 空 + 記)
-コ.追(飛 + 空 + 次)
+        # 2 Digit Logic
+        コ.追(札 + 空 + 丁)
+        コ.追(書 + 空 + 桁 + 空 + 棒)
+        コ.追(置 + 空 + 蓄 + 空 + 壱)
+        コ.追(加 + 空 + 蓄 + 空 + 損)
+        コ.追(加 + 空 + 蓄 + 空 + 丸)
+        コ.追(書 + 空 + 字(501) + 空 + 蓄)
+        コ.追(書 + 空 + 字(502) + 空 + 改)
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 桁)
+        コ.追(置 + 空 + 蜂 + 空 + 三)
+        コ.追(取 + 空 + 苦 + 空 + 針)
+        コ.追(押 + 空 + 穴)
+        コ.追(呼 + 空 + 記)
+        コ.追(飛 + 空 + 次)
 
-# Print Fizz
-コ.追(札 + 空 + 甲)
-コ.追(置 + 空 + 繰 + 空 + 肆)
-コ.追(取 + 空 + タ + 空 + 泡)
-コ.追(置 + 空 + 蜂 + 空 + 字(5))
-コ.追(取 + 空 + 苦 + 空 + 針)
-コ.追(押 + 空 + 穴)
-コ.追(呼 + 空 + 記)
-コ.追(飛 + 空 + 次)
+        # Print Fizz
+        コ.追(札 + 空 + 甲)
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 泡)
+        コ.追(置 + 空 + 蜂 + 空 + 字(5))
+        コ.追(取 + 空 + 苦 + 空 + 針)
+        コ.追(押 + 空 + 穴)
+        コ.追(呼 + 空 + 記)
+        コ.追(飛 + 空 + 次)
 
-# Print Buzz
-コ.追(札 + 空 + 乙)
-コ.追(置 + 空 + 繰 + 空 + 肆)
-コ.追(取 + 空 + タ + 空 + 鳴)
-コ.追(置 + 空 + 蜂 + 空 + 字(5))
-コ.追(取 + 空 + 苦 + 空 + 針)
-コ.追(押 + 空 + 穴)
-コ.追(呼 + 空 + 記)
-コ.追(飛 + 空 + 次)
+        # Print Buzz
+        コ.追(札 + 空 + 乙)
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 鳴)
+        コ.追(置 + 空 + 蜂 + 空 + 字(5))
+        コ.追(取 + 空 + 苦 + 空 + 針)
+        コ.追(押 + 空 + 穴)
+        コ.追(呼 + 空 + 記)
+        コ.追(飛 + 空 + 次)
 
-# Print FizzBuzz
-コ.追(札 + 空 + 丙)
-コ.追(置 + 空 + 繰 + 空 + 肆)
-コ.追(取 + 空 + タ + 空 + 混)
-コ.追(置 + 空 + 蜂 + 空 + 字(9))
-コ.追(取 + 空 + 苦 + 空 + 針)
-コ.追(押 + 空 + 穴)
-コ.追(呼 + 空 + 記)
-コ.追(飛 + 空 + 次)
+        # Print FizzBuzz
+        コ.追(札 + 空 + 丙)
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 混)
+        コ.追(置 + 空 + 蜂 + 空 + 字(9))
+        コ.追(取 + 空 + 苦 + 空 + 針)
+        コ.追(押 + 空 + 穴)
+        コ.追(呼 + 空 + 記)
+        コ.追(飛 + 空 + 次)
 
-# Loop End
-コ.追(札 + 空 + 次)
-コ.追(加 + 空 + 壱 + 空 + 一)
-コ.追(飛 + 空 + 廻)
+        # Loop End
+        コ.追(札 + 空 + 次)
+        コ.追(加 + 空 + 壱 + 空 + 一)
+        コ.追(飛 + 空 + 廻)
 
-# Exit
-コ.追(札 + 空 + 去)
-コ.追(置 + 空 + 繰 + 空 + 穴)
-コ.追(呼 + 空 + 終)
+        # Exit
+        コ.追(札 + 空 + 去)
+        コ.追(置 + 空 + 繰 + 空 + 穴)
+        コ.追(呼 + 空 + 終)
 
-表(結(コ))
-EOF
+        表(結(コ))
+        EOF
 
-        # Generate IR
+        # Generate IR (with error check)
         python stage2_compiler.py win_ir_spec.py1 > win_ir_gen.py || (cat win_ir_gen.py && exit 1)
         python win_ir_gen.py > fizzbuzz_win.ir
         
         # --- 2. Mock VM (Initialized Registers) ---
         cat <<EOF > vm_win_mock.py1
-# Mock VM with LEA support
-@v 表 'print'
-@v 整 'int'
-@v 寸 'len'
-@v 追 'append'
-@v 裂 'split'
-@v 削 'strip'
-@v 行 'splitlines'
-@v 開 'open'
-@v 読 'read'
-@v 換 'replace'
-@v 始 'startswith'
-@v 終 'exit'
-@v 実 'exec'
-@v 字 'chr'
-@v 数 'isnumeric'
-@v 拾 'get'
+        # Mock VM with LEA support
+        @v 表 'print'
+        @v 整 'int'
+        @v 寸 'len'
+        @v 追 'append'
+        @v 裂 'split'
+        @v 削 'strip'
+        @v 行 'splitlines'
+        @v 開 'open'
+        @v 読 'read'
+        @v 換 'replace'
+        @v 始 'startswith'
+        @v 終 'exit'
+        @v 実 'exec'
+        @v 字 'chr'
+        @v 数 'isnumeric'
+        @v 拾 'get'
 
-@v 系 'sys'
-@v 係 'argv'
-@v 込 '"import sys"'
-@v 術 'def'
-@v も 'if'
-@v 他 'else'
-@v 循 'while'
-@v 入 'in'
-@v 或 'elif'
+        @v 系 'sys'
+        @v 係 'argv'
+        @v 込 '"import sys"'
+        @v 術 'def'
+        @v も 'if'
+        @v 他 'else'
+        @v 循 'while'
+        @v 入 'in'
+        @v 或 'elif'
 
-@v 置 '"MOV"'
-@v 取 '"LEA"'
-@v 呼 '"CALL_API"'
-@v 連 '"LOAD_DLL"'
-@v 得 '"GET_PROC"'
-@v 書 '"WRITE_MEM"'
-@v 札 '"LABEL"'
-@v 比 '"CMP"'
-@v 零 '"JZ"'
-@v 飛 '"JMP"'
-@v 加 '"ADD"'
-@v 押 '"PUSH"'
+        @v 置 '"MOV"'
+        @v 取 '"LEA"'
+        @v 呼 '"CALL_API"'
+        @v 連 '"LOAD_DLL"'
+        @v 得 '"GET_PROC"'
+        @v 書 '"WRITE_MEM"'
+        @v 札 '"LABEL"'
+        @v 比 '"CMP"'
+        @v 零 '"JZ"'
+        @v 飛 '"JMP"'
+        @v 加 '"ADD"'
+        @v 押 '"PUSH"'
 
-@v 外 'args'
-@v 径 'path'
-@v 本 'body'
-@v 生 'lines'
-@v コ 'codes'
-@v 順 'i'
-@v 線 'line'
-@v 部 'parts'
-@v 技 'op'
-@v 偽 'mock_api'
-@v 名 'name'
-@v 先 'dst'
-@v 元 'src'
-@v 値 'val'
-@v レ 'regs'
-@v メ 'mem'
-@v 局 'apis'
-@v 指 'ip'
-@v 辞 'labels'
+        @v 外 'args'
+        @v 径 'path'
+        @v 本 'body'
+        @v 生 'lines'
+        @v コ 'codes'
+        @v 順 'i'
+        @v 線 'line'
+        @v 部 'parts'
+        @v 技 'op'
+        @v 偽 'mock_api'
+        @v 名 'name'
+        @v 先 'dst'
+        @v 元 'src'
+        @v 値 'val'
+        @v レ 'regs'
+        @v メ 'mem'
+        @v 局 'apis'
+        @v 指 'ip'
+        @v 辞 'labels'
 
-@v 所 'addr'
-@v 基 'buf_addr'
-@v 幅 'length'
-@v 器 'buffer'
-@v カ 'k'
-@v 符 'char_code'
-@v 果 'exit_code'
-@v 甲 'val_a'
-@v 乙 'val_b'
+        @v 所 'addr'
+        @v 基 'buf_addr'
+        @v 幅 'length'
+        @v 器 'buffer'
+        @v カ 'k'
+        @v 符 'char_code'
+        @v 果 'exit_code'
+        @v 甲 'val_a'
+        @v 乙 'val_b'
 
-@v 核 '"kernel32.dll"'
-@v ハ '"GetStdHandle"'
-@v ラ '"WriteFile"'
-@v 逝 '"ExitProcess"'
-@v 題 '"MockWin: "'
-@v 間 '" "'
-@v モ '"r"'
-@v 権 '"utf-8"'
-@v 号 'encoding'
-@v 蓄 '"RAX"'
-@v 繰 '"RCX"'
-@v タ '"RDX"'
-@v 蜂 '"R8"'
-@v 旗 '"ZF"'
-@v 空 '""'
-@v 説 '"Usage"'
+        @v 核 '"kernel32.dll"'
+        @v ハ '"GetStdHandle"'
+        @v ラ '"WriteFile"'
+        @v 逝 '"ExitProcess"'
+        @v 題 '"MockWin: "'
+        @v 間 '" "'
+        @v モ '"r"'
+        @v 権 '"utf-8"'
+        @v 号 'encoding'
+        @v 蓄 '"RAX"'
+        @v 繰 '"RCX"'
+        @v タ '"RDX"'
+        @v 蜂 '"R8"'
+        @v 旗 '"ZF"'
+        @v 空 '""'
+        @v 説 '"Usage"'
 
-$
+        $
 
-実(込)
+        実(込)
 
-術 偽(名, レ, メ):
- も 名 == ハ:
-  レ[蓄] = 1
- 或 名 == ラ:
-  基 = レ[タ]
-  幅 = レ[蜂]
-  器 = 空
-  カ = 0
-  循 カ < 幅:
-   符 = メ.拾(基 + カ, 0)
-   器 = 器 + 字(符)
-   カ = カ + 1
-  表(題 + 器.削())
-  レ[蓄] = 1
- 或 名 == 逝:
-  系.終(0)
+        術 偽(名, レ, メ):
+         も 名 == ハ:
+          レ[蓄] = 1
+         或 名 == ラ:
+          基 = レ[タ]
+          幅 = レ[蜂]
+          器 = 空
+          カ = 0
+          循 カ < 幅:
+           符 = メ.拾(基 + カ, 0)
+           器 = 器 + 字(符)
+           カ = カ + 1
+          表(題 + 器.削())
+          レ[蓄] = 1
+         或 名 == 逝:
+          系.終(0)
 
-術 動(コ):
- レ = {'RAX':0, 'RBX':0, 'RCX':0, 'RDX':0, 'R8':0, 'R9':0, 'R12':0, 'R13':0}
- メ = {}
- 局 = {}
- 指 = 0
- 
- 辞 = {}
- 順 = 0
- 循 順 < 寸(コ):
-  線 = コ[順]
-  部 = 線.裂(間)
-  も 部[0] == 札:
-   辞[部[1]] = 順
-  順 = 順 + 1
- 
- 循 指 < 寸(コ):
-  線 = コ[指]
-  部 = 線.裂(間)
-  技 = 部[0]
-  
-  も 技 == 連:
-   0
-  或 技 == 得:
-   局[部[1]] = 部[1]
-  或 技 == 呼:
-   偽(部[1], レ, メ)
-  
-  或 技 == 置:
-   先 = 部[1]
-   元 = 部[2]
-   も 元.数():
-    レ[先] = 整(元)
-   他:
-    も 元 入 レ:
-     レ[先] = レ[元]
-    他:
-     レ[先] = 整(元)
+        術 動(コ):
+         # Initialize Registers to avoid ValueError
+         レ = {'RAX':0, 'RBX':0, 'RCX':0, 'RDX':0, 'R8':0, 'R9':0, 'R12':0, 'R13':0, 'ZF':0}
+         メ = {}
+         局 = {}
+         指 = 0
+         
+         辞 = {}
+         順 = 0
+         循 順 < 寸(コ):
+          線 = コ[順]
+          部 = 線.裂(間)
+          も 部[0] == 札:
+           辞[部[1]] = 順
+          順 = 順 + 1
+         
+         循 指 < 寸(コ):
+          線 = コ[指]
+          部 = 線.裂(間)
+          技 = 部[0]
+          
+          も 技 == 連:
+           0
+          或 技 == 得:
+           局[部[1]] = 部[1]
+          或 技 == 呼:
+           偽(部[1], レ, メ)
+          
+          或 技 == 置:
+           先 = 部[1]
+           元 = 部[2]
+           も 元.数():
+            レ[先] = 整(元)
+           他:
+            も 元 入 レ:
+             レ[先] = レ[元]
+            他:
+             レ[先] = 整(元)
 
-  # LEA -> MOV
-  或 技 == 取:
-   先 = 部[1]
-   元 = 部[2]
-   レ[先] = 整(元)
+          # LEA -> MOV
+          或 技 == 取:
+           先 = 部[1]
+           元 = 部[2]
+           レ[先] = 整(元)
 
-  或 技 == 書:
-   所 = 整(部[1])
-   値 = 整(部[2])
-   メ[所] = 値
-  
-  或 技 == 比:
-   先 = 部[1]
-   元 = 部[2]
-   甲 = レ.拾(先, 0)
-   も 元 入 レ:
-    乙 = レ[元]
-   他:
-    乙 = 整(元)
-   も 甲 == 乙:
-    レ[旗] = 1
-   他:
-    レ[旗] = 0
-  
-  或 技 == 零:
-   も レ.拾(旗, 0) == 1:
-    指 = 辞[部[1]]
+          或 技 == 書:
+           所 = 整(部[1])
+           値 = 整(部[2])
+           メ[所] = 値
+          
+          或 技 == 比:
+           先 = 部[1]
+           元 = 部[2]
+           甲 = レ.拾(先, 0)
+           も 元 入 レ:
+            乙 = レ[元]
+           他:
+            乙 = 整(元)
+           も 甲 == 乙:
+            レ[旗] = 1
+           他:
+            レ[旗] = 0
+          
+          或 技 == 零:
+           も レ.拾(旗, 0) == 1:
+            指 = 辞[部[1]]
 
-  # JMP
-  或 技 == 飛:
-   指 = 辞[部[1]]
-  
-  或 技 == 加:
-   先 = 部[1]
-   元 = 部[2]
-   甲 = レ.拾(先, 0)
-   も 元.数():
-    乙 = 整(元)
-   他:
-    乙 = レ[元]
-   レ[先] = 甲 + 乙
-  
-  指 = 指 + 1
+          # JMP
+          或 技 == 飛:
+           指 = 辞[部[1]]
+          
+          或 技 == 加:
+           先 = 部[1]
+           元 = 部[2]
+           甲 = レ.拾(先, 0)
+           も 元.数():
+            乙 = 整(元)
+           他:
+            乙 = レ[元]
+           レ[先] = 甲 + 乙
+          
+          指 = 指 + 1
 
-外 = 系.係
-も 寸(外) < 2:
- 表(説)
- 系.終(1)
+        外 = 系.係
+        も 寸(外) < 2:
+         表(説)
+         系.終(1)
 
-径 = 外[1]
-本 = 開(径, モ, 号=権).読()
-生 = 本.行()
-コ = []
+        径 = 外[1]
+        本 = 開(径, モ, 号=権).読()
+        生 = 本.行()
+        コ = []
 
-順 = 0
-循 順 < 寸(生):
- 線 = 生[順]
- 線 = 線.削()
- も 寸(線) > 0:
-  コ.追(線)
- 順 = 順 + 1
+        順 = 0
+        循 順 < 寸(生):
+         線 = 生[順]
+         線 = 線.削()
+         も 寸(線) > 0:
+          コ.追(線)
+         順 = 順 + 1
 
-動(コ)
-EOF
+        動(コ)
+        EOF
         
         # Run Mock
         python stage2_compiler.py vm_win_mock.py1 > vm_win_mock.py
@@ -595,7 +610,7 @@ EOF
     - name: 19. Check NASM
       run: nasm -v
 
-    # 19.5 Create compiler_x64.py1
+    # 19.5 Create compiler_x64.py1 (Fix: No inline comments, Add JMP)
     - name: 19.5 Create compiler_x64.py1
       run: |
         cat <<EOF > compiler_x64.py1
